HTML5 blog mermaid diagram

--- a/user_guide/blog/2023-07-01-UCAAS-HTML5.md
+++ b/user_guide/blog/2023-07-01-UCAAS-HTML5.md
@@ -161,6 +161,7 @@ sequenceDiagram
     Button->>Listener: Triggers Click Event
     Listener->>User: Displays Information Box
 ```
+![](./2023-07-01-UCAAS-HTML5/mermaid-1.png)
 
 **Practical Code Sample:**
 
