Advanced HTML5 blog

--- a/user_guide/blog/2023-07-01-UCAAS-HTML5.md
+++ b/user_guide/blog/2023-07-01-UCAAS-HTML5.md
@@ -43,182 +43,319 @@ Nevertheless, with comprehensive testing and good security practices, these chal
 
 In the coming sections, we'll deep-dive into HTML5's capabilities in context of telecom collaboration systems. We'll explore practical use-cases, such as manipulating the DOM for dynamic content updates, leveraging the HTML5 Canvas for interactive UIs, customizing CSS for seamless user experience, employing JavaScript events and listeners for responsive interfaces, and utilizing HTML5's audio and video elements for multimedia communication.
 
-## 1. Manipulating the DOM (Document Object Model)
+The WebSocket API is a remarkable technology that provides a full-duplex communication channel between the client and the server. The ability to push messages from the server to the client at any time greatly benefits real-time applications, such as live chat, collaborative document editing, gaming, and real-time analytics.
 
-In the context of web development, a "document" is the webpage loaded in the browser. The Document Object Model (DOM) is a programming interface for HTML and XML documents. It represents the structure of a document as a tree of objects. Each object, or "node" in this tree represents a part of the document (e.g., an element, an attribute, a piece of text, etc.). With the DOM, developers can manipulate the content and structure of the webpage with scripting languages like JavaScript.
+## Advanced Concepts
 
-**Mermaid Diagram Logic (Flowchart):**
+1. **Connection Handling and Heartbeats**: To ensure that a WebSocket connection remains active, it's essential to implement heartbeats, especially in networks with proxies and load balancers that might drop idle connections. This is typically achieved by periodically sending "ping" messages from the client to the server and/or vice versa.
 
-```mermaid
-graph LR
-    A[HTML Document] --> B[JavaScript Function]
-    B --> C[Modified HTML Document]
-```
-**Practical Code Sample:**
+2. **Secure WebSockets (WSS)**: Just like HTTP has its secure variant HTTPS, WebSocket protocol also has WSS (WebSocket Secure), a TLS encrypted WebSocket connection that prevents the data being transferred from being read or tampered with by attackers.
 
-```html
-<!DOCTYPE html>
-<html>
-<body>
-    <p id="demo">Hello, World!</p>
-    <button onclick="changeText()">Click me</button>
+3. **Handling Backpressure**: Backpressure occurs when the WebSocket server is overwhelmed with messages, and it can't process incoming data as quickly as it arrives. To prevent potential out-of-memory issues or data loss, it's crucial to handle backpressure effectively.
 
-    <script>
-    function changeText() {
-        document.getElementById("demo").innerHTML = "Hello, HTML5!";
+4. **Reconnection Strategies**: Networks are not 100% reliable. Disconnections will occur, and it's important to handle them gracefully. This might include strategies such as Exponential Backoff where the client tries to reconnect, but the time between reconnection attempts grows exponentially to avoid flooding the server with requests.
+
+5. **Message Delivery Guarantees**: Depending on the use case, you might need to implement mechanisms for delivery acknowledgments, message ordering, and exactly-once delivery semantics.
+
+## Advanced WebSocket Example in Node.js
+
+Let's illustrate some of these concepts with a simple chat server in Node.js using the `ws` library.
+
+```javascript
+const WebSocket = require('ws');
+
+const wss = new WebSocket.Server({ port: 8080 });
+
+wss.on('connection', (ws) => {
+  console.log('Client connected');
+
+  ws.on('message', (message) => {
+    console.log('Received:', message);
+    // Echo the message back to the client
+    ws.send(message);
+  });
+
+  ws.on('close', () => {
+    console.log('Client disconnected');
+  });
+
+  // Send a heartbeat every 30 seconds
+  const interval = setInterval(() => {
+    if (ws.readyState === ws.OPEN) {
+      ws.send('heartbeat');
     }
-    </script>
-</body>
-</html>
-```
-When you click the button, the JavaScript function changes the text of the paragraph from 'Hello, World!' to 'Hello, HTML5!'.
+  }, 30000);
 
-## 2. Leveraging HTML5's Canvas
-
-The canvas element is part of HTML5 and allows for dynamic, scriptable rendering of 2D shapes and bitmap images. It is a low-level, flexible graphical tool that you can use to create visual components like graphs or even game graphics.
-
-**Mermaid Diagram Logic (Flowchart):**
-
-```mermaid
-graph LR
-    A[HTML Document with Canvas] --> B[JavaScript Rendering on Canvas]
-    B --> C[Final Output Image]
+  ws.on('close', () => {
+    clearInterval(interval);
+  });
+});
 ```
 
-**Practical Code Sample:**
+In this example, we establish a WebSocket server that listens for incoming connections. Whenever a message is received from a client, it is logged and then echoed back to the client. A heartbeat is also set up to be sent every 30 seconds to keep the connection alive.
 
-```html
-<!DOCTYPE html>
-<html>
-<body>
-    <canvas id="myCanvas" width="500" height="500" style="border:1px solid #d3d3d3;">
-    Your browser does not support the HTML5 canvas tag.
-    </canvas>
+### Robust WebSocket Solutions
 
-    <script>
-    var canvas = document.getElementById("myCanvas");
-    var ctx = canvas.getContext("2d");
-    ctx.beginPath();
-    ctx.arc(95, 50, 40, 0, 2 * Math.PI);
-    ctx.stroke();
-    </script>
-</body>
-</html>
-```
-This example uses JavaScript to draw a circle on the canvas.
+In a production environment, you'd often lean on more comprehensive WebSocket solutions. Libraries such as Socket.IO, SockJS, or uWebSockets provide additional features and handle many edge cases for you.
 
-## 3. Customizing CSS (Cascading Style Sheets)
+Let's focus on Socket.IO as an example. This library enables real-time, bidirectional, and event-based communication and handles disconnection/reconnection seamlessly. It also supports auto-upgrade from long-polling to WebSockets, ensuring that real-time functionality works even in environments where WebSockets are not supported or are disabled due to network constraints.
 
-CSS, in combination with HTML5, can be used to create dynamic user interfaces with animations, transitions, and other visual effects. CSS is a stylesheet language used to describe the look and formatting of a document written in HTML.
+Here is an example of a production-ready WebSocket server using Socket.IO:
 
-**Mermaid Diagram Logic (Flowchart):**
+```javascript
+const http = require('http');
+const socketIo = require('socket.io');
 
-```mermaid
-graph LR
-    A[HTML Document] --> B[CSS Styles]
-    B --> C[Styled HTML Document]
-```
+const server = http.createServer();
 
-**Practical Code Sample:**
+const io = socketIo(server, {
+    cors: {
+        origin: "https://your-trusted-domain.com", 
+        methods: ["GET", "POST"]
+    }
+});
 
-```html
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-p {
-  font-size: 20px;
-  color: red;
-  text-align: center;
-}
-</style>
-</head>
-<body>
+io.on('connection', (socket) => {
+    console.log(`New client connected with id: ${socket.id}`);
 
-<p>Hello, HTML5 and CSS!</p>
+    socket.on('disconnect', () => {
+        console.log(`Client with id ${socket.id} disconnected`);
+    });
 
-</body>
-</html>
-```
-In this example, CSS is used to style a paragraph with red color, center alignment, and a font size of 20px.
+    socket.on('chat message', (msg) => {
+        console.log('message: ' + msg);
+        io.emit('chat message', msg);
+    });
+});
 
-## 4. Utilizing JavaScript Events and Listeners
-
-Events are actions or occurrences that happen in the system you are programming, which the system tells you about so you can respond to them in some way if desired. For example, if
-
-the user clicks a button on a webpage, you might want to respond to that action by displaying an information box.
-
-JavaScript event listeners are functions that wait for these events to happen and then execute code in response.
-
-**Mermaid Diagram Logic (Sequence Diagram):**
-
-```mermaid
-sequenceDiagram
-    participant User
-    participant Button
-    participant Listener
-    User->>Button: Clicks Button
-    Button->>Listener: Triggers Click Event
-    Listener->>User: Displays Information Box
-```
-![](./2023-07-01-UCAAS-HTML5/mermaid-1.png)
-
-**Practical Code Sample:**
-
-```html
-<!DOCTYPE html>
-<html>
-<body>
-
-<button onclick="displayAlert()">Click me</button>
-
-<script>
-function displayAlert() {
-  alert("Hello, HTML5 and JavaScript!");
-}
-</script>
-
-</body>
-</html>
-```
-When you click the button, a JavaScript function is executed that displays an alert box with a message.
-
-## 5. HTML5's Audio and Video elements
-
-HTML5 introduced native Audio and Video elements which allow multimedia to be embedded directly into web pages. They can be controlled via JavaScript to create custom controls, autoplay features, and more.
-
-**Mermaid Diagram Logic (Flowchart):**
-
-```mermaid
-graph LR
-    A[HTML Document with Audio/Video Element] --> B[JavaScript Control]
-    B --> C[Modified Audio/Video Playback]
+server.listen(3000, () => {
+    console.log('listening on *:3000');
+});
 ```
 
-**Practical Code Sample:**
+In this snippet, we've created a Socket.IO server that listens to incoming connections and emits and listens for 'chat message' events. CORS is also handled properly to allow connections only from specific trusted domains.
 
-```html
-<!DOCTYPE html>
-<html>
-<body>
+### Enhancing Security: WSS and JWT
 
-<audio id="myAudio" controls>
-  <source src="audio.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+Security is paramount when dealing with WebSocket connections. Therefore, we use WSS (WebSocket Secure) protocol, which provides a secure communication channel.
 
-<button onclick="playAudio()" type="button">Play Audio</button>
+Moreover, for authentication, JSON Web Tokens (JWT) are often used. This helps ensure that the clients connecting to your WebSocket server are who they claim to be. With Socket.IO, you can send the JWT as a query parameter when connecting and then authenticate it in your connection logic:
 
-<script>
-function playAudio() { 
-  document.getElementById("myAudio").play(); 
-}
-</script>
-
-</body>
-</html>
+```javascript
+const socket = require('socket.io-client')('https://your-socket-server.com', {
+    query: {
+        token: 'your_jwt_token'
+    }
+});
 ```
-In this example, an audio file is embedded into the webpage, and a custom button is used to play the audio file using JavaScript.
+
+On the server-side, you can authenticate the token when a new connection is made:
+
+```javascript
+io.use((socket, next) => {
+    const token = socket.handshake.query.token;
+    jwt.verify(token, 'your_secret_key', (err, decoded) => {
+        if (err) return next(new Error('Authentication error'));
+        socket.decoded = decoded;
+        next();
+    });
+}).on('connection', /* your connection logic here */);
+```
+
+This way, you're ensuring that only authenticated clients can establish a connection with your server.
+
+### Production-grade Best Practices
+
+Remember, deploying a production-grade WebSocket application involves more than just writing the server-side and client-side logic. It involves:
+
+1. **Load Balancing**: WebSocket connections are long-lived, which can present unique challenges for load balancing. You'll need to ensure that your load balancer can handle WebSocket connections and that you're using a load balancing strategy that works well with WebSockets, such as IP hashing or Sticky Sessions.
+
+2. **Horizontal Scaling**: Given that WebSocket connections are stateful, horizontal scaling can be challenging. Libraries like Socket.IO offer solutions for this, such as the Adapter feature, which allows broadcasting packets over multiple nodes.
+
+3. **Logging and Monitoring**: Ensure you have ample logging throughout your application, and implement a robust monitoring solution. This will allow you to detect and respond to issues proactively.
+
+4. **Error Handling and Testing**: Robust
+
+error handling is a must, and so is thorough testing. Make sure to cover edge cases that are unique to real-time applications.
+
+## WebSocket Army
+
+## 1. Multiplexing
+
+Multiplexing refers to the process of combining multiple signals into one so that they can be transmitted along a single channel. This concept is quite common in network programming and is extremely useful when you're dealing with a WebSocket.
+
+To put it into perspective, imagine having a live chat application with two separate chatrooms. Without multiplexing, you'd have to create two separate WebSocket connections, which is not efficient.
+
+Socket.IO, a JavaScript library for real-time web applications, supports multiplexing by providing the concept of 'namespaces'. Each namespace operates on the same physical connection and allows event multiplexing, thus allowing us to use a single WebSocket connection for different parts of our application.
+
+Here's an example using Socket.IO in Node.js:
+
+```javascript
+const io = require('socket.io')();
+
+const chat = io
+  .of('/chat')
+  .on('connection', function (socket) {
+    console.log('Connected to chat');
+    socket.emit('message', 'Welcome to chat room');
+});
+
+const news = io
+  .of('/news')
+  .on('connection', function (socket) {
+    console.log('Connected to news');
+    socket.emit('item', 'Welcome to news room');
+});
+
+io.listen(3000);
+```
+
+Here, `chat` and `news` are two different namespaces operating on the same physical connection, effectively demonstrating multiplexing.
+
+## 2. Binary Data Streaming
+
+The WebSocket protocol isn't limited to UTF-8 encoded text messages but also handles binary data. Binary data comes into play when we need to handle things like images, audio streams, video streams, or any blob data or arraybuffer.
+
+Here is an example of sending binary data over a WebSocket:
+
+```javascript
+const WebSocket = require('ws');
+const fs = require('fs');
+
+const wss = new WebSocket.Server({ port: 8080 });
+
+wss.on('connection', (ws) => {
+    ws.on('message', (message) => {
+        console.log(`Received message => ${message}`);
+    });
+
+    let imgData = fs.readFileSync('image.png'); // read image data from file
+    ws.send(imgData, { binary: true }, (error) => { // send the binary data
+        if (error) console.log(`Failed to send binary data => ${error}`);
+    });
+});
+```
+
+In the code above, an image file is read into a buffer using `fs.readFileSync`. This buffer (binary data) is then sent to the client via the WebSocket connection.
+
+## 3. High Frequency Updates
+
+When we talk about high frequency updates, we are generally referring to applications that require pushing a large volume of updates in real time, such as a stock market data feed. WebSocket is ideal for this kind of application because updates can be pushed from the server to the client as soon as they happen.
+
+```javascript
+const WebSocket = require('ws');
+
+const wss = new WebSocket.Server({ port: 8080 });
+
+wss.on('connection', (ws) => {
+  console.log('Client connected');
+
+  // Mock high frequency updates
+  const interval = setInterval(() => {
+    if (ws.readyState === ws.OPEN) {
+      ws.send(JSON.stringify({price: Math.random()}));
+    } else {
+      clearInterval(interval);
+    }
+  }, 100);  // send updates every 100ms
+
+  ws.on('close', () => {
+    clearInterval(interval);
+  });
+});
+```
+
+In this example, a price update is sent to the client every 100ms, simulating a high-frequency update scenario. In a real-world application, instead of generating random price, you would fetch real-time stock market data.
+
+Remember, these are simplified examples. Real-world applications would require handling various other
+
+aspects like error handling, graceful disconnections, and security, to name a few.
+
+## Graceful Disconnections
+
+To handle WebSocket connections properly, we should anticipate and handle disconnections, both expected (graceful) and unexpected.
+
+In the following example, when the client closes the connection, the server also stops sending updates:
+
+```javascript
+const WebSocket = require('ws');
+
+const wss = new WebSocket.Server({ port: 8080 });
+
+wss.on('connection', (ws) => {
+  console.log('Client connected');
+
+  const interval = setInterval(() => {
+    if (ws.readyState === ws.OPEN) {
+      ws.send(JSON.stringify({price: Math.random()}));
+    } else {
+      clearInterval(interval);
+    }
+  }, 100);
+
+  ws.on('close', () => {
+    console.log('Client disconnected');
+    clearInterval(interval);
+  });
+});
+```
+In this example, `ws.readyState === ws.OPEN` checks if the connection is still open before sending data. When the client closes the connection, the 'close' event is triggered, and the interval is cleared.
+
+## Security
+
+WebSocket security is a broad and crucial topic. A few key practices to consider are:
+
+1. **Use WSS (WebSocket Secure)**: To prevent data from being readable if intercepted, always use WebSocket Secure (WSS) in production. This uses TLS (or SSL) to encrypt the data.
+
+2. **Validate and Sanitize Input**: Any data received over a WebSocket connection should be treated as untrusted. Use the same validation and sanitization techniques you would use for HTTP request data.
+
+3. **Authentication and Authorization**: Protect your WebSocket endpoints the same way you would protect HTTP endpoints. One common method is to perform authentication over HTTP and then upgrade the connection to a WebSocket.
+
+Let's incorporate WSS and an authentication token in our earlier high frequency updates example. Assume that the token is generated and validated elsewhere in your application:
+
+```javascript
+const WebSocket = require('ws');
+const https = require('https');
+const fs = require('fs');
+
+// Read SSL certificate
+const server = https.createServer({
+  cert: fs.readFileSync('path/to/cert.pem'),
+  key: fs.readFileSync('path/to/key.pem')
+});
+
+const wss = new WebSocket.Server({ server });
+
+wss.on('connection', (ws, req) => {
+  const token = req.headers['sec-websocket-protocol'];
+  
+  if (!validateToken(token)) {  // Assume this function validates the token
+    ws.close();
+    return;
+  }
+
+  console.log('Client connected');
+  
+  const interval = setInterval(() => {
+    if (ws.readyState === ws.OPEN) {
+      ws.send(JSON.stringify({price: Math.random()}));
+    } else {
+      clearInterval(interval);
+    }
+  }, 100);
+
+  ws.on('close', () => {
+    console.log('Client disconnected');
+    clearInterval(interval);
+  });
+});
+
+server.listen(8080);
+```
+
+In this example, we use Node.js's built-in HTTPS server with the SSL certificate. When a client connects, the server checks the 'sec-websocket-protocol' header for the authentication token and validates it. If the validation fails, the server immediately closes the connection.
+
+Remember, security is a comprehensive topic and goes beyond these measures. Always keep up-to-date with best practices and regularly audit your code and infrastructure.
 
 ## WebAssembly (Wasm)
 
